# diff-rendering

./: pyproject.toml
src/diff_rendering/: __init__.py  dataloader.py  fit_mesh.py  utils.py
